--- a/src/test/resources/15_with.fmx
+++ b/src/test/resources/15_with.fmx
@@ -1,4 +1,4 @@
-<fmx:with fmx:model="items">
+<fmx:with fmx:value="items">
   <my-element b="second" a="first">
     <inner c="third"/>
   </my-element>
